# ODX

./: README.md  configure_macos.sh  run.py  run.sh
.github/ISSUE_TEMPLATE/: feature_request.md  software_fault.md
SuperBuild/: CMakeLists.txt
SuperBuild/cmake/: External-Ceres.cmake  External-Entwine.cmake  External-FPCFilter.cmake  External-GFlags.cmake  External-LASzip.cmake  External-MvsTexturing.cmake  External-OpenCV.cmake  External-OpenMVS.cmake  External-OpenPointClass.cmake  External-OpenSfM.cmake  External-PDAL.cmake  External-PDALPython.cmake  External-RenderDEM.cmake  External-Untwine.cmake  Patch-dem2mesh-apple-openmp.cmake  Patch-mve-openmp.cmake  Patch-mvstexturing-eigen.cmake  Patch-openmvs-boost-system.cmake  Patch-openpointclass-lightgbm.cmake  Patch-opensfm-appleclang.cmake  Patch-pdal-gdal-const.cmake  Patch-poissonrecon-apple-openmp.cmake  Patch-poissonrecon-apple-png.cmake  Patch-vcg-appleclang.cmake
opendm/: bgfilter.py  config.py  onnx_providers.py  osfm.py  photo.py
opendm/dem/: pdal.py
opendm/skyremoval/: skyfilter.py
stages/: odm_report.py  run_opensfm.py  splitmerge.py
tests/: test_onnx_providers.py
